--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,16 @@
     </div>
   </section>
 
+  <footer class="footer">
+    <div class="footer__container">
+      <p class="text--small">&copy; Todos os direitos reservados - 2025
+      </p>
+      <p class="text--small">
+        Desenvolvido por Danilo Jesús
+      </p>
+    </div>
+  </footer>
+
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="scripts/main.js"></script>
 </body>
