--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 <body>
   <header class="hero">
     <div class="container">
-      <p class="hero__text">
-        O aniversário de Danilo Jesús começa em:<br> <span id="contador"></span>
+      <p class="hero__text" id="evento">
+        Venha comemorar o aniversário de Danilo Jesús!!!<br><br>Faltam: <span id="contador"></span>
       </p>
       <div class="infos-bar">
         <ul class="infos-bar__infos">
